--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Meu Blog</title>
 </head>
 <body>
-  <h1>🚀 Meu blog no GitHub Pages</h1>
+<h1>🔥 Funcionou!</h1>
   <p>Site criado gratuitamente com GitHub Pages.</p>
 </body>
 </html>
