--- a/index.html
+++ b/index.html
@@ -3,9 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <title>Meu Blog</title>
+
+  <style>
+    body {
+      background-color: #0f172a; /* fundo */
+      color: #e5e7eb;           /* texto */
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #1e293b;
+      padding: 30px;
+      text-align: center;
+    }
+
+    main {
+      padding: 40px;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    h1 {
+      color: #38bdf8;
+    }
+
+    a {
+      color: #22d3ee;
+      text-decoration: none;
+    }
+  </style>
+</head>
+
+  <meta charset="UTF-8">
+  <title>Meu Blog</title>
 </head>
 <body>
-  <h1>🔥 Funcionou!</h1>
-  <p>Site criado gratuitamente com GitHub Pages.</p>
+  <header>
+    <h1>Meu Site Pessoal</h1>
+    <p>Um espaço para aprender e compartilhar</p>
+  </header>
+
+  <main>
+    <h2>Sobre mim</h2>
+    <p>
+      Olá! Estou criando meu site com GitHub Pages.
+      Em breve vou publicar conteúdos aqui.
+    </p>
+
+    <h2>Links</h2>
+    <ul>
+      <li><a href="#">Instagram</a></li>
+      <li><a href="#">GitHub</a></li>
+    </ul>
+  </main>
+</body>
+  <h1>Bem-vindo ao meu site</h1>
+<p>Aqui vou escrever sobre Exercícios Físicos, Corrida, Natação, Saúde e Qualidade de Vida, além de ideias e projetos incríveis.</p>
 </body>
 </html>
