--- a/index.html
+++ b/index.html
@@ -3,6 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>Meu Blog</title>
+
+  .logo {
+  max-width: 120px;
+  margin-bottom: 15px;
+}
+<style>.posts {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.post {
+  background-color: #1e293b;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.post h3 {
+  color: #38bdf8;
+}
+
 .post a {
   display: inline-block;
   margin-top: 10px;
@@ -113,4 +135,3 @@
     </article>
   </div>
 </section>
-
