--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       padding: 0;
     }
 
-    header {
+    header {<header>
+  <img src="Logotipo preto.png" alt="Minha Logomarca" width="150">
+</header>
+
       background-color: #1e293b;
       padding: 30px;
       text-align: center;
@@ -41,8 +44,8 @@
 </head>
 <body>
   <header>
-    <h1>Meu Site Pessoal</h1>
-    <p>Um espaço para aprender e compartilhar</p>
+    <h1>Sam Trainer</h1>
+    <p>Treinamento Personalizado</p>
   </header>
 
   <main>
