--- a/index.html
+++ b/index.html
@@ -65,4 +65,5 @@
   <h1>Bem-vindo ao meu site</h1>
 <p>Aqui vou escrever sobre Exercícios Físicos, Corrida, Natação, Saúde e Qualidade de Vida, além de ideias e projetos incríveis.</p>
 </body>
-</html>
+</html><img src="Logotipo%20preto.png" alt="Logotipo Sam Trainer" width="150">
+
