--- a/index.html
+++ b/index.html
@@ -2,49 +2,63 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Meu Blog</title>
+  <title>Meu Blog — Sam Trainer</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <style>
+    :root{
+      --bg: #0f172a;
+      --header-bg: #1e293b;
+      --text: #e5e7eb;
+      --accent: #38bdf8;
+      --link: #22d3ee;
+    }
+
     body {
-      background-color: #0f172a; /* fundo */
-      color: #e5e7eb;           /* texto */
+      background-color: var(--bg);
+      color: var(--text);
       font-family: Arial, Helvetica, sans-serif;
       margin: 0;
       padding: 0;
     }
 
-    header {<header>
-  <img src="Logotipo preto.png" alt="Minha Logomarca" width="150">
-</header>
-
-      background-color: #1e293b;
-      padding: 30px;
+    header {
+      background-color: var(--header-bg);
+      padding: 30px 20px;
       text-align: center;
+    }
+
+    header h1 {
+      color: var(--accent);
+      margin: 0;
+      font-size: 2rem;
+    }
+
+    /* Logo centralizada abaixo do título */
+    .logo {
+      display: block;
+      margin: 14px auto 0; /* centraliza e adiciona espaço acima */
+      width: 150px;        /* ajuste conforme necessário */
+      height: auto;
     }
 
     main {
       padding: 40px;
       max-width: 800px;
-      margin: auto;
-    }
-
-    h1 {
-      color: #38bdf8;
+      margin: 0 auto;
     }
 
     a {
-      color: #22d3ee;
+      color: var(--link);
       text-decoration: none;
     }
   </style>
 </head>
-
-  <meta charset="UTF-8">
-  <title>Meu Blog</title>
-</head>
 <body>
   <header>
     <h1>Sam Trainer</h1>
+    <!-- Substitua o src abaixo pelo nome do arquivo da sua imagem no repositório -->
+    <img src="logotipo-preto.png" alt="Logotipo Sam Trainer" class="logo">
     <p>Treinamento Personalizado</p>
   </header>
 
@@ -62,8 +76,4 @@
     </ul>
   </main>
 </body>
-  <h1>Bem-vindo ao meu site</h1>
-<p>Aqui vou escrever sobre Exercícios Físicos, Corrida, Natação, Saúde e Qualidade de Vida, além de ideias e projetos incríveis.</p>
-</body>
-</html><img src="Logotipo%20preto.png" alt="Logotipo Sam Trainer" width="150">
-
+</html>
