Update alt text for logo image

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <header>
     <h1>Sam Trainer</h1>
     <!-- Substitua o src abaixo pelo nome do arquivo da sua imagem no repositório -->
-    <img src="logotipo-preto.png" alt="Logotipo Sam Trainer" class="logo">
+    <img src="logotipo-preto.png" alt="Sam Trainer Treinamento Personalizado" class="logo">
     <p>Treinamento Personalizado</p>
   </header>
 
