Refactor index.html by removing logo and updating text
Removed logo image and updated content in various sections for clarity and organization.

--- a/index.html
+++ b/index.html
@@ -36,13 +36,6 @@
       font-size: 2rem;
     }
 
-    .logo {
-      display: block;
-      margin: 14px auto 0;
-      width: 150px;
-      height: auto;
-    }
-
     nav {
       margin-top: 20px;
     }
@@ -102,33 +95,43 @@
 
   <header>
     <h1>Sam Trainer</h1>
-    <img src="logotipo-preto.png" alt="Sam Trainer Treinamento Personalizado" class="logo">
     <p>Treinamento Personalizado</p>
 
+    <!-- Menu em ordem alfabética -->
     <nav>
       <a href="#corrida">Corrida</a>
+      <a href="#educacao">Educação Física</a>
       <a href="#esportes">Esportes</a>
       <a href="#natacao">Natação</a>
-      <a href="#educacao">Educação Física</a>
-      <a href="#sobre">Sobre Mim</a>
       <a href="#newsletter">Newsletter</a>
+      <a href="#sobre">Sobre Mim</a>
     </nav>
   </header>
 
   <main>
 
+    <!-- Seções em ordem alfabética -->
+
     <section id="corrida">
       <h2>Corrida</h2>
       <p>
-        Conteúdos sobre corrida, desempenho, prevenção de lesões,
-        treinos para iniciantes e avançados.
+        Conteúdos sobre corrida, desempenho, treinos,
+        prevenção de lesões e evolução progressiva.
+      </p>
+    </section>
+
+    <section id="educacao">
+      <h2>Educação Física</h2>
+      <p>
+        Artigos, reflexões e estudos relacionados à educação física,
+        saúde e qualidade de vida.
       </p>
     </section>
 
     <section id="esportes">
       <h2>Esportes</h2>
       <p>
-        Dicas, curiosidades e análises sobre diferentes modalidades esportivas
+        Informações, análises e dicas sobre diferentes modalidades esportivas
         e preparação física.
       </p>
     </section>
@@ -136,35 +139,27 @@
     <section id="natacao">
       <h2>Natação</h2>
       <p>
-        Treinos, técnicas, benefícios e orientações para nadadores
-        de todos os níveis.
-      </p>
-    </section>
-
-    <section id="educacao">
-      <h2>Educação Física</h2>
-      <p>
-        Reflexões, estudos e conteúdos relacionados à educação física,
-        saúde e qualidade de vida.
-      </p>
-    </section>
-
-    <section id="sobre">
-      <h2>Sobre Mim</h2>
-      <p>
-        Olá! Sou o Sam Trainer. Este site foi criado para compartilhar
-        conhecimento, experiências e conteúdos sobre esporte e treinamento.
+        Técnicas, treinos e benefícios da natação para iniciantes
+        e praticantes avançados.
       </p>
     </section>
 
     <section id="newsletter">
       <h2>Newsletter</h2>
       <p>
-        Inscreva-se para receber novidades, artigos e dicas diretamente no seu e-mail.
+        Receba conteúdos exclusivos diretamente no seu e-mail.
       </p>
       <input type="email" placeholder="Digite seu e-mail">
       <br>
       <button>Inscrever-se</button>
+    </section>
+
+    <section id="sobre">
+      <h2>Sobre Mim</h2>
+      <p>
+        Sou o Sam Trainer. Este espaço foi criado para compartilhar
+        conhecimento, experiências e conteúdos sobre esporte e treinamento.
+      </p>
     </section>
 
   </main>
