Refactor sections and add contact form

--- a/index.html
+++ b/index.html
@@ -70,25 +70,6 @@
       font-size: 0.9rem;
       background-color: var(--header-bg);
     }
-
-    input, button {
-      padding: 10px;
-      border-radius: 6px;
-      border: none;
-      margin-top: 10px;
-    }
-
-    input {
-      width: 100%;
-      max-width: 300px;
-    }
-
-    button {
-      background-color: var(--accent);
-      color: #020617;
-      font-weight: bold;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
@@ -97,68 +78,61 @@
     <h1>Sam Trainer</h1>
     <p>Treinamento Personalizado</p>
 
-    <!-- Menu em ordem alfabética -->
     <nav>
       <a href="#corrida">Corrida</a>
       <a href="#educacao">Educação Física</a>
       <a href="#esportes">Esportes</a>
       <a href="#natacao">Natação</a>
-      <a href="#newsletter">Newsletter</a>
+      <a href="#contato">Contato</a>
       <a href="#sobre">Sobre Mim</a>
     </nav>
   </header>
 
   <main>
 
-    <!-- Seções em ordem alfabética -->
-
     <section id="corrida">
       <h2>Corrida</h2>
-      <p>
-        Conteúdos sobre corrida, desempenho, treinos,
-        prevenção de lesões e evolução progressiva.
-      </p>
+      <p>Conteúdos sobre corrida, desempenho, treinos e prevenção de lesões.</p>
     </section>
 
     <section id="educacao">
       <h2>Educação Física</h2>
-      <p>
-        Artigos, reflexões e estudos relacionados à educação física,
-        saúde e qualidade de vida.
-      </p>
+      <p>Reflexões e estudos sobre educação física, saúde e qualidade de vida.</p>
     </section>
 
     <section id="esportes">
       <h2>Esportes</h2>
-      <p>
-        Informações, análises e dicas sobre diferentes modalidades esportivas
-        e preparação física.
-      </p>
+      <p>Dicas e análises sobre modalidades esportivas e preparação física.</p>
     </section>
 
     <section id="natacao">
       <h2>Natação</h2>
-      <p>
-        Técnicas, treinos e benefícios da natação para iniciantes
-        e praticantes avançados.
-      </p>
+      <p>Técnicas e treinos de natação para todos os níveis.</p>
     </section>
 
-    <section id="newsletter">
-      <h2>Newsletter</h2>
+    <section id="contato">
+      <h2>Contato</h2>
       <p>
-        Receba conteúdos exclusivos diretamente no seu e-mail.
+        Inscreva-se na newsletter ou envie dúvidas, críticas e sugestões
+        utilizando o formulário abaixo.
       </p>
-      <input type="email" placeholder="Digite seu e-mail">
-      <br>
-      <button>Inscrever-se</button>
+
+      <iframe
+        src="https://docs.google.com/forms/d/e/1FAIpQLSftvJTykmm2Wtih825hrZMu9B4X-AUivEI_vIxUzjVF_9fPLA/viewform?embedded=true"
+        width="100%"
+        height="750"
+        frameborder="0"
+        marginheight="0"
+        marginwidth="0">
+        Carregando…
+      </iframe>
     </section>
 
     <section id="sobre">
       <h2>Sobre Mim</h2>
       <p>
-        Sou o Sam Trainer. Este espaço foi criado para compartilhar
-        conhecimento, experiências e conteúdos sobre esporte e treinamento.
+        Sou o Sam Trainer. Este espaço foi criado para compartilhar conhecimento
+        sobre esporte, saúde e treinamento.
       </p>
     </section>
 
