Enhance SEO with meta tags in index.html
Added SEO meta tags for better visibility and performance.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+<head><meta name="description" content="Sam Trainer — Conteúdos sobre corrida, esportes, natação e educação física. Treinamento personalizado e saúde.">
+<meta name="keywords" content="corrida, esportes, natação, educação física, treinamento personalizado, saúde">
+<meta name="author" content="Sam Trainer">
+
+<!-- SEO para redes sociais -->
+<meta property="og:title" content="Sam Trainer — Treinamento Personalizado">
+<meta property="og:description" content="Conteúdos sobre esporte, saúde e desempenho físico.">
+<meta property="og:type" content="website">
+
   <meta charset="UTF-8">
   <title>Meu Blog — Sam Trainer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
