Fix header structure in index.html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
       <a href="#contato">Contato</a>
       <a href="#sobre">Sobre Mim</a>
     </nav>
-  </header>
+  </header><header role="banner">
+
 
   <main>
 
