Add ARIA roles and attributes to HTML elements

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
       font-size: 2rem;
     }
 
-    nav {
+    nav {<nav role="navigation" aria-label="Menu principal">
+
       margin-top: 20px;
     }
 
@@ -54,13 +55,15 @@
       font-weight: bold;
     }
 
-    main {
+    main {<main role="main">
+
       padding: 40px 20px;
       max-width: 900px;
       margin: 0 auto;
     }
 
-    section {
+    section {<section id="corrida" tabindex="0">
+
       background-color: var(--section-bg);
       padding: 25px;
       border-radius: 10px;
