--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head><meta name="description" content="Sam Trainer — Conteúdos sobre corrida, esportes, natação e educação física. Treinamento personalizado e saúde.">
-<meta name="keywords" content="corrida, esportes, natação, educação física, treinamento personalizado, saúde">
-<meta name="author" content="Sam Trainer">
-
-<!-- SEO para redes sociais -->
-<meta property="og:title" content="Sam Trainer — Treinamento Personalizado">
-<meta property="og:description" content="Conteúdos sobre esporte, saúde e desempenho físico.">
-<meta property="og:type" content="website">
-
+<head>
   <meta charset="UTF-8">
+
   <title>Meu Blog — Sam Trainer</title>
+
+  <meta name="description" content="Sam Trainer — Conteúdos sobre corrida, esportes, natação e educação física. Treinamento personalizado e saúde.">
+  <meta name="keywords" content="corrida, esportes, natação, educação física, treinamento personalizado, saúde">
+  <meta name="author" content="Sam Trainer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- SEO social -->
+  <meta property="og:title" content="Sam Trainer — Treinamento Personalizado">
+  <meta property="og:description" content="Conteúdos sobre esporte, saúde e desempenho físico.">
+  <meta property="og:type" content="website">
 
   <style>
     :root{
@@ -44,8 +46,7 @@
       font-size: 2rem;
     }
 
-    nav {<nav role="navigation" aria-label="Menu principal">
-
+    nav {
       margin-top: 20px;
     }
 
@@ -53,17 +54,16 @@
       margin: 0 10px;
       color: var(--link);
       font-weight: bold;
+      text-decoration: none;
     }
 
-    main {<main role="main">
-
+    main {
       padding: 40px 20px;
       max-width: 900px;
       margin: 0 auto;
     }
 
-    section {<section id="corrida" tabindex="0">
-
+    section {
       background-color: var(--section-bg);
       padding: 25px;
       border-radius: 10px;
@@ -75,6 +75,12 @@
       margin-top: 0;
     }
 
+    iframe {
+      width: 100%;
+      border-radius: 10px;
+      background-color: var(--section-bg);
+    }
+
     footer {
       text-align: center;
       padding: 20px;
@@ -83,13 +89,14 @@
     }
   </style>
 </head>
+
 <body>
 
-  <header>
+  <header role="banner">
     <h1>Sam Trainer</h1>
     <p>Treinamento Personalizado</p>
 
-    <nav>
+    <nav role="navigation" aria-label="Menu principal">
       <a href="#corrida">Corrida</a>
       <a href="#educacao">Educação Física</a>
       <a href="#esportes">Esportes</a>
@@ -97,32 +104,31 @@
       <a href="#contato">Contato</a>
       <a href="#sobre">Sobre Mim</a>
     </nav>
-  </header><header role="banner">
+  </header>
 
+  <main role="main">
 
-  <main>
-
-    <section id="corrida">
+    <section id="corrida" tabindex="0">
       <h2>Corrida</h2>
       <p>Conteúdos sobre corrida, desempenho, treinos e prevenção de lesões.</p>
     </section>
 
-    <section id="educacao">
+    <section id="educacao" tabindex="0">
       <h2>Educação Física</h2>
       <p>Reflexões e estudos sobre educação física, saúde e qualidade de vida.</p>
     </section>
 
-    <section id="esportes">
+    <section id="esportes" tabindex="0">
       <h2>Esportes</h2>
       <p>Dicas e análises sobre modalidades esportivas e preparação física.</p>
     </section>
 
-    <section id="natacao">
+    <section id="natacao" tabindex="0">
       <h2>Natação</h2>
       <p>Técnicas e treinos de natação para todos os níveis.</p>
     </section>
 
-    <section id="contato">
+    <section id="contato" tabindex="0">
       <h2>Contato</h2>
       <p>
         Inscreva-se na newsletter ou envie dúvidas, críticas e sugestões
@@ -131,7 +137,6 @@
 
       <iframe
         src="https://docs.google.com/forms/d/e/1FAIpQLSftvJTykmm2Wtih825hrZMu9B4X-AUivEI_vIxUzjVF_9fPLA/viewform?embedded=true"
-        width="100%"
         height="750"
         frameborder="0"
         marginheight="0"
@@ -140,7 +145,7 @@
       </iframe>
     </section>
 
-    <section id="sobre">
+    <section id="sobre" tabindex="0">
       <h2>Sobre Mim</h2>
       <p>
         Sou o Sam Trainer. Este espaço foi criado para compartilhar conhecimento
