Enhance nav links and update swimming section
Added hover effect to navigation links and updated swimming section with a link to the full article.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
       text-decoration: none;
     }
 
+    nav a:hover {
+      text-decoration: underline;
+    }
+
     main {
       padding: 40px 20px;
       max-width: 900px;
@@ -125,7 +129,11 @@
 
     <section id="natacao" tabindex="0">
       <h2>Natação</h2>
-      <p>Técnicas e treinos de natação para todos os níveis.</p>
+      <p>
+        Técnicas e treinos de natação para todos os níveis.
+        <br>
+        <a href="posts/natacao.html">Ler artigo completo →</a>
+      </p>
     </section>
 
     <section id="contato" tabindex="0">
@@ -136,6 +144,7 @@
       </p>
 
       <iframe
+        title="Formulário de contato e newsletter"
         src="https://docs.google.com/forms/d/e/1FAIpQLSftvJTykmm2Wtih825hrZMu9B4X-AUivEI_vIxUzjVF_9fPLA/viewform?embedded=true"
         height="750"
         frameborder="0"
