Revise title and meta description in index.html
Updated the title and meta description for SEO improvements. Removed unused styles and sections for cleaner code.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
 
-  <title>Meu Blog — Sam Trainer</title>
+  <title>Sam Trainer — Treinamento Personalizado</title>
 
-  <meta name="description" content="Sam Trainer — Conteúdos sobre corrida, esportes, natação e educação física. Treinamento personalizado e saúde.">
+  <!-- SEO -->
+  <meta name="description" content="Sam Trainer — Conteúdos sobre corrida, esportes, natação e educação física. Treinamento personalizado, saúde e desempenho físico.">
   <meta name="keywords" content="corrida, esportes, natação, educação física, treinamento personalizado, saúde">
   <meta name="author" content="Sam Trainer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- SEO social -->
+  <!-- Open Graph -->
   <meta property="og:title" content="Sam Trainer — Treinamento Personalizado">
   <meta property="og:description" content="Conteúdos sobre esporte, saúde e desempenho físico.">
   <meta property="og:type" content="website">
@@ -30,143 +31,9 @@
       color: var(--text);
       font-family: Arial, Helvetica, sans-serif;
       margin: 0;
-      padding: 0;
-      line-height: 1.6;
+      line-height: 1.7;
     }
 
     header {
       background-color: var(--header-bg);
       padding: 30px 20px;
-      text-align: center;
-    }
-
-    header h1 {
-      color: var(--accent);
-      margin: 0;
-      font-size: 2rem;
-    }
-
-    nav {
-      margin-top: 20px;
-    }
-
-    nav a {
-      margin: 0 10px;
-      color: var(--link);
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: 0 auto;
-    }
-
-    section {
-      background-color: var(--section-bg);
-      padding: 25px;
-      border-radius: 10px;
-      margin-bottom: 30px;
-    }
-
-    section h2 {
-      color: var(--accent);
-      margin-top: 0;
-    }
-
-    iframe {
-      width: 100%;
-      border-radius: 10px;
-      background-color: var(--section-bg);
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9rem;
-      background-color: var(--header-bg);
-    }
-  </style>
-</head>
-
-<body>
-
-  <header role="banner">
-    <h1>Sam Trainer</h1>
-    <p>Treinamento Personalizado</p>
-
-    <nav role="navigation" aria-label="Menu principal">
-      <a href="#corrida">Corrida</a>
-      <a href="#educacao">Educação Física</a>
-      <a href="#esportes">Esportes</a>
-      <a href="#natacao">Natação</a>
-      <a href="#contato">Contato</a>
-      <a href="#sobre">Sobre Mim</a>
-    </nav>
-  </header>
-
-  <main role="main">
-
-    <section id="corrida" tabindex="0">
-      <h2>Corrida</h2>
-      <p>Conteúdos sobre corrida, desempenho, treinos e prevenção de lesões.</p>
-    </section>
-
-    <section id="educacao" tabindex="0">
-      <h2>Educação Física</h2>
-      <p>Reflexões e estudos sobre educação física, saúde e qualidade de vida.</p>
-    </section>
-
-    <section id="esportes" tabindex="0">
-      <h2>Esportes</h2>
-      <p>Dicas e análises sobre modalidades esportivas e preparação física.</p>
-    </section>
-
-    <section id="natacao" tabindex="0">
-      <h2>Natação</h2>
-      <p>
-        Técnicas e treinos de natação para todos os níveis.
-        <br>
-        <a href="posts/natacao.html">Ler artigo completo →</a>
-      </p>
-    </section>
-
-    <section id="contato" tabindex="0">
-      <h2>Contato</h2>
-      <p>
-        Inscreva-se na newsletter ou envie dúvidas, críticas e sugestões
-        utilizando o formulário abaixo.
-      </p>
-
-      <iframe
-        title="Formulário de contato e newsletter"
-        src="https://docs.google.com/forms/d/e/1FAIpQLSftvJTykmm2Wtih825hrZMu9B4X-AUivEI_vIxUzjVF_9fPLA/viewform?embedded=true"
-        height="750"
-        frameborder="0"
-        marginheight="0"
-        marginwidth="0">
-        Carregando…
-      </iframe>
-    </section>
-
-    <section id="sobre" tabindex="0">
-      <h2>Sobre Mim</h2>
-      <p>
-        Sou o Sam Trainer. Este espaço foi criado para compartilhar conhecimento
-        sobre esporte, saúde e treinamento.
-      </p>
-    </section>
-
-  </main>
-
-  <footer>
-    © 2026 — Sam Trainer • GitHub Pages
-  </footer>
-
-</body>
-</html>
