Clean up index.html by removing unused sections
Removed multiple sections and styles from index.html to streamline the layout.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
       text-decoration: none;
     }
 
-    nav a:hover {
+    nav a:hover,
+    nav a:focus {
       text-decoration: underline;
+      outline: none;
     }
 
     main {
@@ -68,198 +70,4 @@
     }
 
     section {
-      background-color: var(--section-bg);
-      padding: 30px;
-      border-radius: 14px;
-      margin-bottom: 40px;
-    }
-
-    section h2 {
-      color: var(--accent);
-      margin-top: 0;
-    }
-
-    p {
-      text-align: justify;
-      margin-bottom: 1.2rem;
-    }
-
-    ul {
-      padding-left: 20px;
-    }
-
-    li {
-      margin-bottom: 8px;
-    }
-
-    a {
-      color: var(--link);
-    }
-
-    iframe {
-      width: 100%;
-      height: 750px;
-      border: none;
-      border-radius: 10px;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9rem;
-      background-color: var(--header-bg);
-    }
-  </style>
-</head>
-
-<body>
-
-<header role="banner">
-  <h1>Sam Trainer</h1>
-  <p>Treinamento Personalizado</p>
-
-  <nav role="navigation" aria-label="Menu principal">
-    <a href="#artigos">Artigos</a>
-    <a href="#corrida">Corrida</a>
-    <a href="#educacao">Educação Física</a>
-    <a href="#esportes">Esportes</a>
-    <a href="#natacao">Natação</a>
-    <a href="#contato">Contato</a>
-    <a href="#sobre">Sobre Mim</a>
-  </nav>
-</header>
-
-<main role="main">
-
-  <!-- LISTAGEM DE ARTIGOS -->
-  <section id="artigos">
-    <h2>Artigos</h2>
-    <ul>
-      <li><a href="#natacao">A importância da natação para a vida humana</a></li>
-      <li><a href="#corrida">Corrida: saúde, desempenho e constância</a></li>
-      <li><a href="#educacao">Educação Física e formação integral</a></li>
-      <li><a href="#esportes">O papel dos esportes no desenvolvimento humano</a></li>
-    </ul>
-  </section>
-
-  <!-- CORRIDA -->
-  <section id="corrida">
-    <h2>Corrida</h2>
-    <p>
-      A corrida é uma das formas mais naturais de locomoção do ser humano e,
-      consequentemente, uma das práticas físicas mais acessíveis e eficientes
-      para a promoção da saúde. Ao correr, o corpo trabalha de forma integrada,
-      exigindo coordenação, resistência, força e equilíbrio.
-    </p>
-    <p>
-      A prática regular da corrida melhora a capacidade cardiorrespiratória,
-      fortalece músculos e articulações e auxilia no controle do peso corporal.
-      Além dos benefícios físicos, a corrida atua diretamente na saúde mental,
-      auxiliando na redução do estresse, ansiedade e sintomas depressivos.
-    </p>
-    <p>
-      Para que os benefícios sejam alcançados com segurança, é fundamental
-      respeitar a progressão dos treinos, utilizar equipamentos adequados e
-      compreender os limites individuais do corpo.
-    </p>
-  </section>
-
-  <!-- EDUCAÇÃO FÍSICA -->
-  <section id="educacao">
-    <h2>Educação Física</h2>
-    <p>
-      A Educação Física é uma área do conhecimento que estuda o movimento humano
-      em suas diferentes manifestações. Seu papel vai muito além da prática
-      esportiva, contribuindo para a formação integral do indivíduo.
-    </p>
-    <p>
-      Por meio da Educação Física, desenvolvem-se capacidades físicas, cognitivas
-      e sociais, estimulando valores como cooperação, respeito, disciplina e
-      autonomia. O movimento torna-se uma ferramenta essencial para a promoção
-      da saúde e da qualidade de vida ao longo de todas as fases da vida.
-    </p>
-    <p>
-      Em contextos escolares, esportivos ou de treinamento personalizado, a
-      Educação Física atua como base para escolhas conscientes e hábitos
-      saudáveis duradouros.
-    </p>
-  </section>
-
-  <!-- ESPORTES -->
-  <section id="esportes">
-    <h2>Esportes</h2>
-    <p>
-      Os esportes fazem parte da cultura humana e desempenham um papel
-      fundamental no desenvolvimento físico, emocional e social. Cada modalidade
-      esportiva apresenta características próprias, exigindo diferentes
-      habilidades motoras e estratégias.
-    </p>
-    <p>
-      A prática esportiva contribui para o desenvolvimento da disciplina,
-      resiliência, trabalho em equipe e superação de desafios. Além disso,
-      promove benefícios fisiológicos importantes, como o aumento da força,
-      resistência e coordenação motora.
-    </p>
-    <p>
-      Independentemente do nível de performance, o esporte deve ser entendido
-      como um meio de promoção da saúde, bem-estar e socialização.
-    </p>
-  </section>
-
-  <!-- NATAÇÃO -->
-  <section id="natacao">
-    <h2>Natação</h2>
-    <p>
-      A natação é um dos esportes essenciais à vida humana. O ser humano não nasce
-      sabendo nadar, assim como não nasce sabendo ler e escrever. As habilidades
-      natatórias são aprendidas com o passar do tempo, por meio da adaptação ao
-      meio líquido.
-    </p>
-    <p>
-      Movimentos fundamentais como respiração, flutuação, coordenação e técnicas
-      de batidas de pernas e braços fazem parte do processo de aprendizagem. Esses
-      elementos garantem segurança, autonomia e eficiência no ambiente aquático.
-    </p>
-    <p>
-      Além dos benefícios cardiorrespiratórios, a natação melhora o tônus
-      muscular, desenvolve a resistência aeróbica e contribui significativamente
-      para a saúde mental.
-    </p>
-    <p>
-      <em>“Todo homem culto deve saber ler, escrever e nadar.” — Platão</em>
-    </p>
-  </section>
-
-  <!-- CONTATO -->
-  <section id="contato">
-    <h2>Contato</h2>
-    <p>
-      Inscreva-se na newsletter ou envie dúvidas, críticas e sugestões
-      utilizando o formulário abaixo.
-    </p>
-
-    <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLSftvJTykmm2Wtih825hrZMu9B4X-AUivEI_vIxUzjVF_9fPLA/viewform?embedded=true"
-      loading="lazy">
-      Carregando…
-    </iframe>
-  </section>
-
-  <!-- SOBRE -->
-  <section id="sobre">
-    <h2>Sobre Mim</h2>
-    <p>
-      Sou o Sam Trainer. Este espaço foi criado para compartilhar conhecimento,
-      experiências e reflexões sobre esporte, saúde e treinamento físico,
-      promovendo uma abordagem consciente e acessível ao movimento humano.
-    </p>
-  </section>
-
-</main>
-
-<footer>
-  © 2026 — Sam Trainer • GitHub Pages
-</footer>
-
-</body>
-</html>
+      background-
