Refactor section styles and add content sections
Updated section styles and added new sections for content.

--- a/index.html
+++ b/index.html
@@ -70,4 +70,145 @@
     }
 
     section {
-      background-
+      background-color: var(--section-bg);
+      padding: 30px;
+      border-radius: 14px;
+      margin-bottom: 40px;
+    }
+
+    section h2 {
+      color: var(--accent);
+      margin-top: 0;
+    }
+
+    p {
+      text-align: justify;
+      margin-bottom: 1.2rem;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    a {
+      color: var(--link);
+    }
+
+    iframe {
+      width: 100%;
+      height: 750px;
+      border: none;
+      border-radius: 10px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+      background-color: var(--header-bg);
+    }
+  </style>
+</head>
+
+<body>
+
+<header role="banner">
+  <h1>Sam Trainer</h1>
+  <p>Treinamento Personalizado</p>
+
+  <nav role="navigation" aria-label="Menu principal">
+    <a href="#artigos">Artigos</a>
+    <a href="#corrida">Corrida</a>
+    <a href="#educacao">Educação Física</a>
+    <a href="#esportes">Esportes</a>
+    <a href="#natacao">Natação</a>
+    <a href="#contato">Contato</a>
+    <a href="#sobre">Sobre Mim</a>
+  </nav>
+</header>
+
+<main role="main">
+
+  <section id="artigos">
+    <h2>Artigos</h2>
+    <ul>
+      <li><a href="#natacao">A importância da natação para a vida humana</a></li>
+      <li><a href="#corrida">Corrida: saúde, desempenho e constância</a></li>
+      <li><a href="#educacao">Educação Física e formação integral</a></li>
+      <li><a href="#esportes">O papel dos esportes no desenvolvimento humano</a></li>
+    </ul>
+  </section>
+
+  <section id="corrida">
+    <h2>Corrida</h2>
+    <p>
+      A corrida é uma das formas mais naturais de locomoção do ser humano e uma
+      prática acessível para a promoção da saúde física e mental.
+    </p>
+    <p>
+      Melhora o sistema cardiorrespiratório, fortalece músculos e auxilia no
+      controle do estresse e da ansiedade.
+    </p>
+  </section>
+
+  <section id="educacao">
+    <h2>Educação Física</h2>
+    <p>
+      A Educação Física estuda o movimento humano e contribui para a formação
+      integral do indivíduo ao longo da vida.
+    </p>
+  </section>
+
+  <section id="esportes">
+    <h2>Esportes</h2>
+    <p>
+      O esporte desenvolve habilidades físicas, sociais e emocionais, promovendo
+      saúde, disciplina e bem-estar.
+    </p>
+  </section>
+
+  <section id="natacao">
+    <h2>Natação</h2>
+    <p>
+      A natação é um dos esportes essenciais à vida humana. As habilidades
+      natatórias são aprendidas com o tempo e proporcionam segurança e saúde.
+    </p>
+    <p>
+      <em>“Todo homem culto deve saber ler, escrever e nadar.” — Platão</em>
+    </p>
+  </section>
+
+  <section id="contato">
+    <h2>Contato</h2>
+    <p>
+      Inscreva-se na newsletter ou envie dúvidas, críticas e sugestões.
+    </p>
+
+    <iframe
+      src="https://docs.google.com/forms/d/e/1FAIpQLSftvJTykmm2Wtih825hrZMu9B4X-AUivEI_vIxUzjVF_9fPLA/viewform?embedded=true"
+      loading="lazy">
+      Carregando…
+    </iframe>
+  </section>
+
+  <section id="sobre">
+    <h2>Sobre Mim</h2>
+    <p>
+      Sou o Sam Trainer. Compartilho conhecimento sobre esporte, saúde e
+      treinamento físico de forma acessível e consciente.
+    </p>
+  </section>
+
+</main>
+
+<footer>
+  © 2026 — Sam Trainer • GitHub Pages
+</footer>
+
+</body>
+</html>
+
