Fix HTML formatting and update links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<! DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
@@ -6,24 +6,24 @@
   <title>Sam Trainer — Treinamento Personalizado</title>
 
   <!-- SEO -->
-  <meta name="description" content="Sam Trainer — Conteúdos sobre corrida, esportes, natação e educação física. Treinamento personalizado, saúde e desempenho físico.">
+  <meta name="description" content="Sam Trainer — Conteúdos sobre corrida, esportes, natação e educação física.  Treinamento personalizado, saúde e desempenho físico.">
   <meta name="keywords" content="corrida, esportes, natação, educação física, treinamento personalizado, saúde">
   <meta name="author" content="Sam Trainer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Sam Trainer — Treinamento Personalizado">
-  <meta property="og:description" content="Conteúdos sobre esporte, saúde e desempenho físico.">
+  <meta property="og: title" content="Sam Trainer — Treinamento Personalizado">
+  <meta property="og: description" content="Conteúdos sobre esporte, saúde e desempenho físico. ">
   <meta property="og:type" content="website">
 
   <style>
-    :root{
-      --bg: #0f172a;
+    : root{
+      --bg:  #0f172a;
       --header-bg: #1e293b;
       --section-bg: #020617;
-      --text: #e5e7eb;
+      --text:  #e5e7eb;
       --accent: #38bdf8;
-      --link: #22d3ee;
+      --link:  #22d3ee;
     }
 
     body {
@@ -73,17 +73,17 @@
       background-color: var(--section-bg);
       padding: 30px;
       border-radius: 14px;
-      margin-bottom: 40px;
+      margin-bottom:  40px;
     }
 
     section h2 {
-      color: var(--accent);
+      color:  var(--accent);
       margin-top: 0;
     }
 
     p {
       text-align: justify;
-      margin-bottom: 1.2rem;
+      margin-bottom: 1. 2rem;
     }
 
     ul {
@@ -136,7 +136,7 @@
   <section id="artigos">
     <h2>Artigos</h2>
     <ul>
-      <li><a href="#natacao">A importância da natação para a vida humana</a></li>
+      <li><a href="artigos/natacao. html">A importância da natação para a vida humana</a></li>
       <li><a href="#corrida">Corrida: saúde, desempenho e constância</a></li>
       <li><a href="#educacao">Educação Física e formação integral</a></li>
       <li><a href="#esportes">O papel dos esportes no desenvolvimento humano</a></li>
@@ -151,7 +151,7 @@
     </p>
     <p>
       Melhora o sistema cardiorrespiratório, fortalece músculos e auxilia no
-      controle do estresse e da ansiedade.
+      controle do estresse e da ansiedade. 
     </p>
   </section>
 
@@ -174,18 +174,21 @@
   <section id="natacao">
     <h2>Natação</h2>
     <p>
-      A natação é um dos esportes essenciais à vida humana. As habilidades
+      A natação é um dos esportes essenciais à vida humana.  As habilidades
       natatórias são aprendidas com o tempo e proporcionam segurança e saúde.
     </p>
     <p>
-      <em>“Todo homem culto deve saber ler, escrever e nadar.” — Platão</em>
+      <em>"Todo homem culto deve saber ler, escrever e nadar." — Platão</em>
+    </p>
+    <p>
+      <a href="artigos/natacao.html"><strong>Leia o artigo completo →</strong></a>
     </p>
   </section>
 
   <section id="contato">
     <h2>Contato</h2>
     <p>
-      Inscreva-se na newsletter ou envie dúvidas, críticas e sugestões.
+      Inscreva-se na newsletter ou envie dúvidas, críticas e sugestões. 
     </p>
 
     <iframe
@@ -198,7 +201,7 @@
   <section id="sobre">
     <h2>Sobre Mim</h2>
     <p>
-      Sou o Sam Trainer. Compartilho conhecimento sobre esporte, saúde e
+      Sou o Sam Trainer.  Compartilho conhecimento sobre esporte, saúde e
       treinamento físico de forma acessível e consciente.
     </p>
   </section>
@@ -211,4 +214,3 @@
 
 </body>
 </html>
-
